Tam biet va them sdt

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>Rất vui được gặp mọi người</h2>
     <h3>Hôm nay mọi người thế nào</h3>
     <h4>Tạm biệt</h4>
+    <h5>Good bye</h5>
+    <h6>Liên hệ số điện thoại: 12345</h6>
 </body>
 </html>
